# nofib

./: .gitignore  README.md  eta-benchmarks.sh  ghc-benchmarks.sh  nofib.cabal
imaginary/exp3_8/: Makefile
jmh/src/main/java/com/typelead/: TestBenchmark.java
real/hidden/: Makefile
real/scs/: Makefile
shake/: Build.hs
spectral/last-piece/: Main.hs
spectral/secretary/: Main.lhs  Makefile
spectral/simple/: Main.hs
